<resources>
    <string name="app_name">Hyponic</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Kata Sandi</string>
    <string name="confirmPassLabel">Konfirmasi Kata Sandi</string>
    <string name="loginText">Masuk</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="belum_mempunyai_akun">Belum mempunyai akun?</string>
    <string name="sudah_mempunyai_akun">Sudah mempunyai akun?</string>
    <string name="daftarText">Daftar</string>
    <string name="sapaan">Selamat Datang di Hyponic</string>
    <string name="nama">Nama Lengkap</string>
    <string name="selesaikanDailyActivity">Selesaikan daily activitymu</string>
    <string name="artikel_terbaru">Artikel Terbaru</string>
    <string name="isiArtikel">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.</string>
    <string name="progress">Progress 40%</string>
    <string name="title">Judul</string>
    <string name="description">Kategori artikel</string>
    <string name="tanamanku">Tanamanku</string>
    <string name="terakhir">Terakhir di ubah</string>
    <string name="selengkapnya">Selengkapnya ></string>
    <string name="title_activity_home1">Home1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="plantName">Nama Tanamanku</string>
    <string name="plantDate">Tanggal terakhir diubah</string>
    <string name="edit">UBAH</string>
    <string name="delete">HAPUS</string>
    <string name="seeDetail">LIHAT</string>
    <string name="dialog_create_new_plant">Buat Tanaman Barumu</string>
    <string name="insertNamePlant">Masukkan nama tanamanmu!</string>
    <string name="cancel">BATAL</string>
    <string name="save">SIMPAN</string>
    <string name="editNamePlant">Masukkan nama baru tanamanmu</string>
    <string name="dialog_edit_plant">Ubah Nama Tanamanmu</string>
    <string name="namePlant">Nama Tanaman</string>
    <string name="DatePantau">Tanggal Pantau</string>
    <string name="heightPlant">Panjang Tanaman (mm)</string>
    <string name="leafWidth">Lebar Daun (mm)</string>
    <string name="temperature">Suhu °C</string>
    <string name="Acidity">PH Air</string>
    <string name="dialog_delete_detailplant">Yakin menghapus data perkembangan tanamanmu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Tanamanku</string>
    <string name="title_notifications">Akun Saya</string>
    <string name="myPlant">Tanamanku</string>
    <string name="insightWidth">Top 3 Pertumbuhan Lebar Tercepat</string>
    <string name="insight">Top 3 Pertumbuhan Tinggi Tercepat</string>
    <string name="listPlant">Daftar Tanamanku</string>
    <string name="no">1</string>
    <string name="growth_per_day">16,5 mm/hari</string>
    <string name="dialog_delete_plant">Yakin ingin menghapus tanamanmu?</string>
    <string name="editPhoto">Ubah photo profil</string>
    <string name="logout">LogOut</string>
    <string name="blank_data">Belum ada data</string>
    <string name="editUser">Ubah</string>
    <string name="tutorial">Tutorial</string>
    <string name="image_description">gambar artikel</string>
    <string name="pantau">Pantau</string>
    <string name="plantdescription">plantImage</string>
    <string name="create_new_plant">Buat Tanaman Baru</string>
    <string name="image_frame_description">imageFrame</string>
    <string name="update_plant">Ubah Tanaman</string>
    <string name="article">Artikel</string>
    <string name="article_subheading">Artikel utuk membantu anda</string>
    <string name="description1">deskripsi logo</string>
    <string name="edited_by">Oleh</string>
    <string name="grafik_pertumbuhan">Grafik Pertumbuhan</string>
    <string name="notFound">Tidak ada data</string>

</resources>