<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <TextView
        android:id="@+id/no"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/no"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_gravity="start"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/namePlant"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/growth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="2dp"
        android:text="@string/growth_per_day"
        android:textColor="@color/black"
        android:textSize="14sp"/>
</androidx.cardview.widget.CardView>