<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/layout2"
    tools:context=".Home1Activity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rvCardGreeting"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal">

        <LinearLayout
            android:id="@+id/cardGreeting"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sapaan"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nama"
                android:textSize="14sp"
                android:textColor="@color/hyponicLogo"
                android:textStyle="bold"/>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@id/cardGreeting"
            android:src="@drawable/user" />

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tanamanku"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/terakhir"
        android:textColor="@color/hyponicLogo"
        android:textStyle="bold"
        android:textSize="14sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_NLatestPlant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/btnGetAllPlant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/selengkapnya"
        android:textColor="@color/hyponicLogo"
        android:textStyle="bold"
        android:textSize="14sp"/>




</LinearLayout>