<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BerandaActivity"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/cardGreeting"
            android:layout_width="230dp"
            android:layout_height="80dp"

            android:layout_marginRight="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sapaan"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nama"/>

        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/profil"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/selesaikanDailyActivity"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dailyActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/artikel_terbaru"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_artikel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>