<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detailplant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/tanggaltable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="Tanggal"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/panjangtable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/heightPlant"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toEndOf="@+id/tanggaltable"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lebardauntable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="start"
            android:text="@string/leafWidth"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/panjangtable"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/phairtable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="start"
            android:text="@string/Acidity"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/lebardauntable"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/suhutable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:gravity="start"
            android:text="@string/temperature"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/phairtable"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>